# visreg

./: .gitignore  README.md  pyproject.toml  scale_and_collapse_simulation.sh  train.py  train_inet10_toy.py
configs/: default.yaml  imagenette.yaml  vit-l.yaml
configs/loss/: barlow.yaml  sigreg.yaml  swd.yaml  vicreg.yaml  visreg.yaml
datasets/: build_imagenet_lt_hf_dataset.py  download_datasets.sh
downstream/: README.md  dataset_utils.py  model_zoo.py
downstream/fine_tuning/: train_finetune.py
downstream/linear_prob/: run_evaluation.py
downstream/segmentation/: run_linear_seg.py
scripts/: bench_cost.py  collapse_gradient_analysis.py
visreg/: __init__.py  utils.py
visreg/data/: __init__.py  imagenet.py  imagenette.py  multicrop.py  multicrop_kornia.py
visreg/losses/: __init__.py  barlow.py  swd.py  vicreg.py
visreg/models/: __init__.py  vit_encoder.py
